--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "element-ui": "^2.13.0",
+    "mobile-select": "^1.1.2",
     "register-service-worker": "^1.6.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "vant": "^2.5.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.5",
